# games101

./: .gitignore  CMakeLists.txt  README.md
diagnostics/: CMakeLists.txt  context_logger.cpp  context_logger.hpp
hw0/: CMakeLists.txt  main.cpp
hw1/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw2/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw3/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw4/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  Light.hpp  Object.hpp  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
include/: common.h
utils/: CMakeLists.txt  discrete_math.cpp  discrete_math.hpp
